# job_search_action_center

./: .firebaserc  .gitignore  ACTION_PLAN.md  CLAUDE.md  HANDOFF.md  Jobsearch.md  Notify-list.json  PLAN.md  PROJECTS.md  README.md  ROADMAP.md  Target-list.json  WORKFLOW.md  agent resume instructions.md  application_cli.py  backup_sheet.py  config.py  exclusions.py  extract_airtable.py  extract_greenhouse.py  job_compare.py  linkedin_post_cli.py  matching.py  migrate_airtable_to_sheets.py  models.py  networking_cli.py  notify_list.py  pyproject.toml  report.py  resume_audit_cli.py  resume_page_gate.py  routing.py  runner.py  salary.py  scoring.py  scrape_network.py
.claude/: REVIEW-deepseek.md  ROLE.md
.claude/agents/: kimi.md
.claude/instructions/: review-first-application-engine.md
.claude/reviews/: phase-0-checklist.md  phase-9-sheets-pipeline-instructions.md  pr-1-deepseek.md  pr-1-mimo.md
.devcontainer/: devcontainer.json
.github/workflows/: application.yml  backup-sheet.yml  ci.yml  daily-jobs.yml  daily-networking.yml
.mimo/: coder_instructions.md  deepseek_reviewer_instructions.md
.mimo/tickets/: phase-0.md  phase-2.md  phase-3.md  phase-9.md
apply/: application_package.py  ats.py  ats_resume_audit.py  auto_apply.py  browser_submitter.py  draft.py  resume_artifact.py  resume_bank.py  resume_builder.py  resume_models.py  review_engine.py  tailor.py
config/: application_answers.example.json  exclusions.json  networking_targets.example.json
docs/: APPLICATION_TRACKING.md  AUTO_APPLICATION.md  BANK_APPLICATION_PORTALS.md  LINKEDIN_POST_MATCHING.md  NETWORKING_TEMPLATE_REVIEW.md  PRIVATE_REPOSITORY.md
network/: email_finder.py  gmail_drafter.py  gmail_network.py  json_feed.py  linkedin_post_matcher.py  linkedin_poster.py  networking_templates.py  outreach.py  telegram_notifier.py
okr/: __init__.py  calendar.py  gaps.py  store.py  strategy.py
scripts/: get_gmail_refresh_token.py
sources/: base.py  efinancialcareers.py  greenhouse.py  linkedin.py  mycareersfuture.py  workday.py
store/: airtable_repo.py  google_drive_resume_archive.py  google_sheets_repo.py  hubspot_repo.py  repository.py
tests/: test_airtable_repo.py  test_application_draft.py  test_application_package.py  test_ats_resume_audit.py  test_auto_apply.py  test_browser_pdf_gate.py  test_efinancialcareers_source.py  test_email_finder.py  test_exclusions.py  test_gmail_network.py  test_google_drive_resume_archive.py  test_google_sheets_repo.py  test_greenhouse_source.py  test_hubspot_repo.py  test_job_compare.py  test_json_feed.py  test_linkedin_post_cli.py  test_linkedin_post_matcher.py  test_linkedin_poster.py  test_linkedin_source.py  test_matching.py  test_mycareersfuture.py  test_networking_templates.py  test_notify_list.py  test_okr_calendar.py  test_okr_gaps.py  test_okr_store.py  test_okr_strategy.py  test_outreach.py  test_outreach_pipeline.py  test_report.py  test_repository.py  test_resume_artifact.py  test_resume_bank.py  test_resume_builder.py  test_resume_page_gate.py  test_review_engine.py  test_routing.py  test_runner_auto_apply.py  test_salary.py  (+4 more)
web/: apphosting.yaml  package-lock.json  package.json  tsconfig.json
web/app/: AuthGate.tsx  FitPanel.tsx  InterviewPanel.tsx  OkrPanel.tsx  commandDeckCss.ts  globals.css  layout.tsx  page.tsx
web/lib/: firebase-admin.ts  firebase-client.ts  fit.ts  interview.ts  models.ts  sheets.ts
(+6 files in other folders)
