[project]
name = "job-search-action-center"
version = "0.1.0"
description = "Tiered job-search automation (Data/AI + Finance hybrid)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["."]
